[#83] - update api
